--- a/packages/logos-docusaurus-theme/src/client/theme/MDXComponents/style.module.scss
+++ b/packages/logos-docusaurus-theme/src/client/theme/MDXComponents/style.module.scss
@@ -1,7 +1,3 @@
 .collapse button {
   width: 100% !important;
 }
-
-.collapse > div:last-child {
-  padding: 24px;
-}
